# meta-hybrid_mount

./: .gitignore  .gitmodules  Cargo.toml  LICENCE_HEADER  README.md  README_ZH.md  USAGE_NOTICE.md  build.rs  changelog.md  cliff.toml  crowdin.yml  licenserc.toml  rust-toolchain.toml  rustfmt.toml  update.json
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-label.yml  build-hymofs-lkm.yml  build-kasumi-lkm.yml  build.yml  hymofs-lkm.yml  kasumi-lkm.yml  license_header.yml  lints.yml  release.yml  update_webui_submodule.yml
kpm/src/: nuke_ext4_sysfs.c
module/: config.toml  customize.sh  emulated-soft-reboot.sh  metainstall.sh  metamount.sh  metauninstall.sh  sepolicy.rule  uninstall.sh
scripts/: build-local.sh
src/: defs.rs  main.rs  partitions.rs
src/conf/: cli.rs  cli_handlers.rs  config.rs  loader.rs  mod.rs  schema.rs  store.rs
src/conf/cli_handlers/: api.rs  basic.rs  hide.rs  hymofs.rs  kasumi.rs  lkm.rs  mod.rs  shared.rs
src/core/: api.rs  app.rs  backend.rs  backend_capabilities.rs  cli_commands.rs  controller.rs  entry.rs  finalize.rs  hymofs_coordinator.rs  kasumi_coordinator.rs  manager.rs  mod.rs  module_status.rs  recovery.rs  runtime_finalization.rs  runtime_state.rs  state.rs  storage.rs  user_hide_rules.rs
src/core/api/: error.rs  hymofs.rs  kasumi.rs  mod.rs  system.rs  topology.rs
src/core/boot/recovery/: markers.rs  mod.rs  state.rs
src/core/inventory/: discovery.rs  listing.rs  mod.rs  model.rs  presenter.rs  scanner.rs
src/core/ops/: executor.rs  mod.rs  plan.rs  planner.rs  sync.rs
src/core/ops/executor/: fallback.rs  hymofs.rs  magic.rs  mod.rs  overlay.rs  support.rs
src/core/ops/planner/: walk.rs
src/core/startup/: mod.rs
src/core/startup/recovery/: mod.rs  retry_state.rs  skip_markers.rs
src/core/storage/: backends.rs  ext4.rs  mod.rs
src/domain/: mod.rs
src/mount/: mod.rs  node.rs  umount_mgr.rs
src/mount/hymofs/: common.rs  compile.rs  mod.rs  runtime.rs  status.rs  tests.rs
src/mount/kasumi/: common.rs  compile.rs  mod.rs  runtime.rs  status.rs
src/mount/magic_mount/: mod.rs  utils.rs
src/mount/overlayfs/: mod.rs  overlayfs.rs  utils.rs
src/sys/: hymofs.rs  kasumi.rs  lkm.rs  mod.rs  mount.rs  nuke.rs
src/sys/fs/: file.rs  mod.rs  xattr.rs
src/utils/: mod.rs  path.rs  validation.rs
tools/notify/: Cargo.toml
webui/: .gitignore  .hintrc  README.md  README.zh-CN.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
webui/scripts/: generate-info-tab-data.mjs
webui/src/: App.tsx  app.css  init.ts  layout.css  main.tsx  material-web.d.ts
webui/src/components/: BottomActions.tsx  ChipInput.css  ChipInput.tsx  NavBar.css  NavBar.tsx  Skeleton.css  Skeleton.tsx  Toast.css  Toast.tsx  TopBar.css  TopBar.tsx
webui/src/lib/: api.mock.ts  api.ts  constants.ts  cookies.ts  infoTabData.ts  moduleMode.test.ts  moduleMode.ts  types.ts
webui/src/lib/stores/: configStore.ts  kasumiStore.ts  moduleStore.ts  sysStore.ts  uiStore.ts
webui/src/locales/: en-US.json  es-ES.json  it-IT.json  ja-JP.json  ru-RU.json  uk-UA.json  vi-VN.json  zh-CN.json  zh-TW.json
webui/src/routes/: ConfigTab.css  ConfigTab.tsx  InfoTab.css  InfoTab.tsx  KasumiTab.css  KasumiTab.tsx  ModulesTab.css  ModulesTab.tsx  StatusTab.css  StatusTab.tsx
xtask/: Cargo.toml
xtask/src/: main.rs  zip_ext.rs
