# Copyright (C) 2026 YuzakiKokuban <heibanbaize@gmail.com>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

[workspace]
members = ["xtask"]
resolver = "2"

[package]
name = "hybrid-mount"
version = "3.5.0"
edition = "2024"
description = "Waiting for daemon..."
authors = ["Hybrid Mount Developers"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/Hybrid-Mount/meta-hybrid_mount"

[package.metadata.hybrid_mount]
name = "Hybrid Mount"
update = "https://raw.githubusercontent.com/YuzakiKokuban/meta-hybrid_mount/master/update.json"


[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
extattr = "1"
rustix = { version = "1.1", features = ["fs", "mount"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
mimalloc = { version = "0.1.48", features = ["no_thp", "override"] }
walkdir = "2.5.0"
regex-lite = "0.1.9"
jwalk = "0.8.1"
log = "0.4.29"
flate2 = "1.1.9"
fastrand = "2.4.1"
const_format = "0.2.35"
glob = "0.3.3"
tempfile = "3.27.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.10"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
procfs = "0.18"
ksu = { git = "https://github.com/Tools-cx-app/ksu.git", version = "0.2.0" }
loopdev = { git = "https://github.com/Hybrid-Mount/loopdev.git", version = "0.5.0" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
panic = "abort"

[build-dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["serde_derive"] }
toml = "1.1"
