# Copyright 2025 Meta-Hybrid Mount Authors
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
fs_extra = "1.3"
hybrid-mount-notify = { package = "notify", git = "https://github.com/Hybrid-Mount/hybrid_mount_notify.git", branch = "main" }
serde = { version = "1.0.228", features = ["serde_derive"] }
toml = "1.1.2"
zip = "8.5.1"
